--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -36,6 +36,13 @@
   padding-right: 20px;
 }
 
+@media (min-width: 576px){
+  .mb-sm-0, .my-sm-0{
+    margin-bottom: 5px !important;
+    margin-top: 5px !important;
+  }
+}
+
 #header .logout {
   display: none;
   padding-top: 3px;
