user can now search own projects/tasks in dashboard :zap:

--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -258,8 +258,9 @@ div.required label:after {
     }
 }
 
-#dashboard .my_projects_search_input button {
-    background-color: #dc4e42;
+#dashboard .my_projects_search_input button,
+#dashboard .my_tasks_search_input button {
+    background-color: #F25F5C !important;
     color: white;
 }
 
