--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -233,6 +233,12 @@ div.required label:after {
 
 /* dashboard */
 
+@media (max-width: 728px) {
+    #dashboard .nav-link{
+        margin-bottom: 5px;
+    }
+}
+
 #dashboard .card-body .media {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
