Tanto no Dashboard/Projects como na Profile Page, quando tem mais do que um Projeto não está a apresentar em flex :bug:

--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -435,6 +435,7 @@ div.required label:after {
     width: 10em;
     overflow: hidden;
     margin: 15px;
+    display: inline-block;
 }
 
 .card.project-card img {
